--- a/src/pianolearn/scenes/HandBookScene.fxml
+++ b/src/pianolearn/scenes/HandBookScene.fxml
@@ -3,18 +3,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-            stylesheets="@stylesheets/style.css" xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="pianolearn.controllers.HandBookController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="575.0" stylesheets="@stylesheets/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pianolearn.controllers.HandBookController">
     <center>
         
     </center>
    <left>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button id="mainMenuButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="MainMenu" onAction="#openMainMenu" />
-         </children>
-      </AnchorPane>
+       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </left>
+   <top>
+       <StackPane prefHeight="63.0" prefWidth="575.0" BorderPane.alignment="CENTER">
+           <Button id="mainMenuButton" mnemonicParsing="false" onAction="#openMainMenu" text="MainMenu⮌"/>
+       </StackPane>
+   </top>
 </BorderPane>
