--- a/src/pianolearn/controllers/scenes/PianoScene.fxml
+++ b/src/pianolearn/controllers/scenes/PianoScene.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="575.0" stylesheets="@stylesheets/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pianolearn.controllers.PianoController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="575.0" stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pianolearn.controllers.PianoController">
 
    <bottom>
        <AnchorPane id="PianoPane" prefHeight="340.0" prefWidth="575.0" onKeyPressed="#handleKeyPressed">
