--- a/src/pianolearn/controllers/scenes/PianoScene.fxml
+++ b/src/pianolearn/controllers/scenes/PianoScene.fxml
@@ -7,19 +7,19 @@
 
    <bottom>
        <AnchorPane id="PianoPane" prefHeight="340.0" prefWidth="575.0" onKeyPressed="#handleKeyPressed">
-           <Button layoutX="16.0"  layoutY="20.0" fx:id="C1Button"      onAction="#playC1Button"      styleClass="WhiteNote" text="C" />
-           <Button layoutX="49.0"  layoutY="20.0" fx:id="CSharp1Button" onAction="#playCSharp1Button" styleClass="BlackNote" text="C#" />
-           <Button layoutX="84.0"  layoutY="20.0" fx:id="D1Button"      onAction="#playD1Button"      styleClass="WhiteNote" text="D" />
-           <Button layoutX="117.0" layoutY="20.0" fx:id="DSharp1Button" onAction="#playDSharp1Button" styleClass="BlackNote" text="D#" />
-           <Button layoutX="152.0" layoutY="20.0" fx:id="E1Button"      onAction="#playE1Button"      styleClass="WhiteNote" text="E" />
-           <Button layoutX="220.0" layoutY="20.0" fx:id="F1Button"      onAction="#playF1Button"      styleClass="WhiteNote" text="F" />
-           <Button layoutX="256.0" layoutY="20.0" fx:id="FSharp1Button" onAction="#playFSharp1Button" styleClass="BlackNote" text="F#" />
-           <Button layoutX="288.0" layoutY="20.0" fx:id="G1Button"      onAction="#playG1Button"      styleClass="WhiteNote" text="G" />
-           <Button layoutX="324.0" layoutY="20.0" fx:id="GSharp1Button" onAction="#playGSharp1Button" styleClass="BlackNote" text="G#" />
-           <Button layoutX="356.0" layoutY="20.0" fx:id="A1Button"      onAction="#playA1Button"      styleClass="WhiteNote" text="A" />
-           <Button layoutX="392.0" layoutY="20.0" fx:id="ASharp1Button" onAction="#playASharp1Button" styleClass="BlackNote" text="A#" />
-           <Button layoutX="424.0" layoutY="20.0" fx:id="B1Button"      onAction="#playB1Button"      styleClass="WhiteNote" text="B" />
-           <Button layoutX="492.0" layoutY="20.0" fx:id="C2Button"      onAction="#playC2Button"      styleClass="WhiteNote" text="C" />
+           <Button layoutX="16.0"  layoutY="20.0" onAction="#playC1Button"      styleClass="WhiteNote" text="C" />
+           <Button layoutX="49.0"  layoutY="20.0" onAction="#playCSharp1Button" styleClass="BlackNote" text="C#" />
+           <Button layoutX="84.0"  layoutY="20.0" onAction="#playD1Button"      styleClass="WhiteNote" text="D" />
+           <Button layoutX="117.0" layoutY="20.0" onAction="#playDSharp1Button" styleClass="BlackNote" text="D#" />
+           <Button layoutX="152.0" layoutY="20.0" onAction="#playE1Button"      styleClass="WhiteNote" text="E" />
+           <Button layoutX="220.0" layoutY="20.0" onAction="#playF1Button"      styleClass="WhiteNote" text="F" />
+           <Button layoutX="256.0" layoutY="20.0" onAction="#playFSharp1Button" styleClass="BlackNote" text="F#" />
+           <Button layoutX="288.0" layoutY="20.0" onAction="#playG1Button"      styleClass="WhiteNote" text="G" />
+           <Button layoutX="324.0" layoutY="20.0" onAction="#playGSharp1Button" styleClass="BlackNote" text="G#" />
+           <Button layoutX="356.0" layoutY="20.0" onAction="#playA1Button"      styleClass="WhiteNote" text="A" />
+           <Button layoutX="392.0" layoutY="20.0" onAction="#playASharp1Button" styleClass="BlackNote" text="A#" />
+           <Button layoutX="424.0" layoutY="20.0" onAction="#playB1Button"      styleClass="WhiteNote" text="B" />
+           <Button layoutX="492.0" layoutY="20.0" onAction="#playC2Button"      styleClass="WhiteNote" text="C" />
        </AnchorPane>
    </bottom>
    <left>
