--- a/src/pianolearn/scenes/HandBookScene.fxml
+++ b/src/pianolearn/scenes/HandBookScene.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="575.0" stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pianolearn.controllers.HandBookController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="575.0" stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pianolearn.HandBookController">
     <center>
         <AnchorPane id="HandBookPane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <Label layoutX="25.0" layoutY="30.0" styleClass="labelHandBook" text="Root note:" />
